[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ftl-reasons"
version = "0.2.0"
description = "Reasons — automatic belief retraction and dependency-directed backtracking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
reasons = "reasons_lib.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
